test/should_fail/operator_pattern_pos.erl
-module(operator_pattern_pos).

-spec p(pos_integer()) -> {}.
p(1-1) -> {}.
